--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Test Web</title>
   <style>
     body {
+      user-select:none;
       background-color: #0d0d0d;
       color: #00ffcc;
       font-family: Arial, sans-serif;
